--- a/engineering.html
+++ b/engineering.html
@@ -19,12 +19,90 @@
   <style>
     .card { border-radius: 1rem; box-shadow: 0 8px 24px rgba(2,6,23,.06); background: rgba(255,255,255,.92); backdrop-filter: blur(6px); }
     .container-narrow { max-width: 1100px; }
+
+    /* BEFORE / AFTER SLIDER */
+    .ba-wrap{
+      position: relative;
+      width: 100%;
+      aspect-ratio: 16/9; /* cambia a 21/9 si quieres menos recorte vertical */
+      overflow: hidden;
+      border-radius: 1rem;
+      border: 1px solid rgba(148,163,184,.35);
+      background: #fff;
+    }
+    .ba-wrap img{
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      user-select: none;
+      -webkit-user-drag: none;
+      pointer-events: none;
+    }
+    .ba-after-clip{
+      position: absolute;
+      inset: 0;
+      width: 55%;
+      overflow: hidden;
+    }
+    .ba-divider{
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 55%;
+      width: 2px;
+      background: rgba(37,99,235,.95); /* kairu-600 */
+      transform: translateX(-1px);
+      pointer-events: none;
+    }
+    .ba-handle{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.92);
+      border: 1px solid rgba(37,99,235,.55);
+      box-shadow: 0 10px 26px rgba(2,6,23,.12);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      color: #1d4ed8; /* kairu-700 */
+      font-weight: 800;
+      backdrop-filter: blur(6px);
+    }
+    .ba-arrow{ font-size: 12px; line-height: 1; opacity: .9; }
+    .ba-range{
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      appearance: none;
+      background: transparent;
+      cursor: ew-resize;
+      z-index: 5;
+    }
+    .ba-range::-webkit-slider-thumb{
+      appearance: none;
+      width: 28px; height: 28px;
+      background: transparent;
+      border: none;
+    }
+    .ba-range::-moz-range-thumb{
+      width: 28px; height: 28px;
+      background: transparent;
+      border: none;
+    }
   </style>
 </head>
 
 <body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
-  <!-- HEADER (simple, coherente con tu web) -->
+  <!-- HEADER -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <div class="flex items-center justify-between h-16">
@@ -62,17 +140,19 @@
 
   <!-- HERO -->
   <section class="relative overflow-hidden">
-    <div class="mx-auto px-4 sm:px-6 pt-12 pb-10 container-narrow">
-      <div class="grid md:grid-cols-2 gap-10 items-center">
+    <div class="mx-auto px-4 sm:px-6 pt-10 pb-10 container-narrow">
+      <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
-          <p class="text-xs uppercase tracking-wider text-slate-500">Construcción · Ingeniería · Infraestructuras</p>
+          <p class="text-xs uppercase tracking-wider text-slate-500">
+            Construcción · Ingeniería · Infraestructuras
+          </p>
 
           <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold leading-tight">
             Toma decisiones críticas <span class="text-kairu-600">antes</span> de construir.
             <span class="block">Ve el proyecto sobre el <span class="text-kairu-600">terreno real</span>.</span>
           </h1>
 
-          <p class="mt-5 text-lg text-slate-600">
+          <p class="mt-4 text-lg text-slate-600">
             Visualización contextual para reducir errores, alinear equipos y minimizar riesgos en proyectos complejos.
           </p>
 
@@ -86,42 +166,40 @@
           </p>
         </div>
 
-        <div class="card p-6">
-          <div class="grid grid-cols-2 gap-4">
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Menos</p>
-              <p class="text-sm text-slate-600">cambios tardíos</p>
+        <div class="card p-4 sm:p-5">
+          <div class="flex items-end justify-between gap-4 flex-wrap">
+            <div>
+              <p class="text-sm font-semibold">Ejemplo real (Antes / Después)</p>
+              <p class="mt-1 text-xs text-slate-500">Arrastra para comparar el terreno real con la visualización del proyecto.</p>
             </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Más</p>
-              <p class="text-sm text-slate-600">alineación</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Mejor</p>
-              <p class="text-sm text-slate-600">defensa de decisiones</p>
-            </div>
-            <div class="p-4 rounded-xl bg-slate-50">
-              <p class="text-3xl font-bold">Menos</p>
-              <p class="text-sm text-slate-600">incertidumbre</p>
-            </div>
+            <div class="text-[11px] text-slate-400">*Imágenes conceptuales</div>
           </div>
 
-          <!-- IMAGEN HERO (opcional) -->
-          <div class="mt-5 rounded-xl overflow-hidden border border-slate-200">
-            <!-- Cambia la ruta por tu imagen -->
-            <img src="/assets/hero.jpg" alt="Visualización conceptual del proyecto sobre el terreno real" class="w-full h-56 object-cover">
+          <div class="mt-4 ba-wrap" data-start="55">
+            <img class="ba-before" src="/assets/ar-before.jpg" alt="Terreno real (antes)">
+            <div class="ba-after-clip">
+              <img class="ba-after" src="/assets/ar-after.jpg" alt="Terreno con visualización (después)">
+            </div>
+            <div class="ba-divider" aria-hidden="true">
+              <div class="ba-handle">
+                <span class="ba-arrow">◀</span>
+                <span class="ba-arrow">▶</span>
+              </div>
+            </div>
+            <input class="ba-range" type="range" min="0" max="100" value="55" aria-label="Comparar antes y después">
           </div>
 
-          <p class="mt-3 text-xs text-slate-500">
-            *Visualización conceptual con fines explicativos.
-          </p>
+          <div class="mt-3 flex justify-between text-xs text-slate-500">
+            <span>Antes</span>
+            <span>Después</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <!-- PROBLEMA -->
-  <section id="problema" class="py-12 bg-white/60 border-y border-slate-200/60">
+  <section id="problema" class="py-10 bg-white/60 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">El problema</h2>
       <p class="mt-3 text-slate-600 max-w-3xl">
@@ -129,33 +207,33 @@
         Eso genera errores evitables en proyectos complejos.
       </p>
 
-      <div class="mt-8 grid md:grid-cols-4 gap-6">
-        <div class="card p-6">
+      <div class="mt-7 grid md:grid-cols-4 gap-5">
+        <div class="card p-5">
           <h3 class="font-semibold text-lg">Cambios tardíos</h3>
           <p class="mt-2 text-sm text-slate-600">Modificaciones cuando el margen de maniobra ya es mínimo.</p>
         </div>
-        <div class="card p-6">
+        <div class="card p-5">
           <h3 class="font-semibold text-lg">Desalineación</h3>
           <p class="mt-2 text-sm text-slate-600">Ingeniería, dirección y cliente no ven lo mismo.</p>
         </div>
-        <div class="card p-6">
+        <div class="card p-5">
           <h3 class="font-semibold text-lg">Retrasos</h3>
           <p class="mt-2 text-sm text-slate-600">Validaciones lentas y aprobaciones bloqueadas.</p>
         </div>
-        <div class="card p-6">
+        <div class="card p-5">
           <h3 class="font-semibold text-lg">Riesgo</h3>
           <p class="mt-2 text-sm text-slate-600">Impacto económico y reputacional por decisiones ambiguas.</p>
         </div>
       </div>
 
-      <p class="mt-6 text-sm text-slate-700">
+      <p class="mt-5 text-sm text-slate-700">
         <strong>Un error en esta fase no cuesta poco.</strong> Cuesta tiempo, dinero y reputación.
       </p>
     </div>
   </section>
 
   <!-- SOLUCIÓN -->
-  <section id="solucion" class="py-12">
+  <section id="solucion" class="py-10">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">La solución</h2>
       <p class="mt-3 text-slate-600 max-w-3xl">
@@ -165,7 +243,7 @@
         No sustituye al BIM ni a la ingeniería. <strong>Añade claridad donde hoy hay interpretación.</strong>
       </p>
 
-      <div class="mt-8 grid md:grid-cols-2 gap-6 items-center">
+      <div class="mt-7 grid md:grid-cols-2 gap-5 items-stretch">
         <div class="card p-6">
           <h3 class="font-semibold text-lg">Qué problemas resuelve</h3>
           <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
@@ -185,8 +263,8 @@
             <li>Revisión en parcela, reuniones o material visual entregable</li>
           </ol>
 
-          <div class="mt-5 rounded-xl overflow-hidden border border-slate-200">
-            <img src="/assets/tablet-site.jpg" alt="Uso en parcela con tablet" class="w-full h-44 object-cover">
+          <div class="mt-5 text-xs text-slate-500">
+            No necesitas que “sea en directo” siempre. Lo importante es reducir interpretación y riesgo.
           </div>
         </div>
       </div>
@@ -227,7 +305,7 @@
           Hablar del piloto
         </a>
         <p class="mt-3 text-xs text-white/70">
-          *Visualizaciones conceptuales con fines explicativos.
+          *Las visualizaciones mostradas son conceptuales y tienen fines explicativos.
         </p>
       </div>
     </div>
@@ -245,10 +323,34 @@
   </footer>
 
   <script>
+    // Year
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Mobile menu
     document.getElementById('menuBtn').addEventListener('click', ()=>{
       document.getElementById('mobileMenu').classList.toggle('hidden');
     });
+
+    // Before/After slider logic
+    (function(){
+      const wraps = document.querySelectorAll('.ba-wrap');
+      wraps.forEach(wrap => {
+        const range = wrap.querySelector('.ba-range');
+        const clip  = wrap.querySelector('.ba-after-clip');
+        const div   = wrap.querySelector('.ba-divider');
+        const start = wrap.dataset.start ? Number(wrap.dataset.start) : Number(range.value);
+
+        range.value = String(start);
+        clip.style.width = start + '%';
+        div.style.left   = start + '%';
+
+        range.addEventListener('input', (e) => {
+          const v = Number(e.target.value);
+          clip.style.width = v + '%';
+          div.style.left   = v + '%';
+        });
+      });
+    })();
   </script>
 
 </body>
