--- a/engineering.html
+++ b/engineering.html
@@ -24,7 +24,7 @@
     .ba-wrap{
       position: relative;
       width: 100%;
-      aspect-ratio: 16/9;
+      aspect-ratio: 16/9; /* prueba 21/9 si quieres menos recorte vertical */
       overflow: hidden;
       border-radius: 1rem;
       border: 1px solid rgba(148,163,184,.35);
@@ -37,6 +37,8 @@
       height: 100%;
       object-fit: cover;
       pointer-events: none;
+      user-select: none;
+      -webkit-user-drag: none;
     }
     .ba-after-clip{
       position: absolute;
@@ -50,7 +52,7 @@
       bottom: 0;
       left: 55%;
       width: 2px;
-      background: rgba(37,99,235,.95);
+      background: rgba(37,99,235,.95); /* kairu-600 */
       transform: translateX(-1px);
       pointer-events: none;
     }
@@ -69,8 +71,9 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
-      color: #1d4ed8;
+      color: #1d4ed8; /* kairu-700 */
       font-weight: 800;
+      backdrop-filter: blur(6px);
     }
     .ba-range{
       position: absolute;
@@ -82,11 +85,14 @@
       cursor: ew-resize;
       z-index: 5;
     }
-    .ba-range::-webkit-slider-thumb,
-    .ba-range::-moz-range-thumb{
+    .ba-range::-webkit-slider-thumb{
       appearance: none;
-      width: 28px;
-      height: 28px;
+      width: 28px; height: 28px;
+      background: transparent;
+      border: none;
+    }
+    .ba-range::-moz-range-thumb{
+      width: 28px; height: 28px;
       background: transparent;
       border: none;
     }
@@ -95,182 +101,259 @@
 
 <body class="antialiased text-slate-800 bg-gradient-to-b from-white to-slate-50">
 
-<!-- HERO -->
-<section class="relative">
-  <div class="mx-auto px-4 sm:px-6 pt-12 pb-10 container-narrow">
-    <div class="grid lg:grid-cols-2 gap-10 items-center">
+  <!-- HEADER KairuTech -->
+  <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200/50">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <div class="flex items-center justify-between h-16">
 
-      <!-- TEXTO -->
-      <div>
-        <p class="text-xs uppercase tracking-wider text-slate-500">
-          Construcción · Ingeniería · Infraestructuras
-        </p>
+        <!-- LOGO -->
+        <a href="/" class="flex items-center gap-3">
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="text-kairu-600">
+            <path d="M12 2l3.5 6.5L22 9l-5 4.9L18.5 21 12 17.8 5.5 21 7 13.9 2 9l6.5-.5L12 2z"
+              stroke="currentColor" stroke-width="1.2" fill="none"/>
+          </svg>
+          <span class="font-semibold text-lg">
+            Kairu <span class="text-kairu-600">Tech</span>
+          </span>
+        </a>
 
-        <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold leading-tight">
-          Decisiones críticas <span class="text-kairu-600">antes</span> de construir.
-          <span class="block">El proyecto visto sobre el <span class="text-kairu-600">terreno real</span>.</span>
-        </h1>
-
-        <p class="mt-4 text-lg text-slate-600">
-          Visualización avanzada en parcela mediante drones para reducir errores,
-          alinear decisores y minimizar riesgos en fases donde el coste del error es máximo.
-        </p>
-
-        <p class="mt-3 text-sm font-medium text-slate-800">
-          No es una demo de realidad aumentada.
-          <span class="text-kairu-600">Es una herramienta para decidir con menos interpretación y menos riesgo.</span>
-        </p>
-
-        <div class="mt-6 flex gap-3 flex-wrap">
-          <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-            Explorar piloto técnico
+        <!-- MENU DESKTOP -->
+        <nav class="hidden md:flex items-center gap-6 text-sm">
+          <a href="#valor" class="hover:text-kairu-600">Valor</a>
+          <a href="#uso" class="hover:text-kairu-600">Cuándo usarlo</a>
+          <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
+          <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
+            Explorar piloto
           </a>
-          <a href="#valor" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
-            Por qué es diferente
-          </a>
-        </div>
+        </nav>
 
-        <p class="mt-4 text-xs text-slate-500 max-w-md">
-          Diseñado principalmente para fases previas a la construcción y
-          revisiones puntuales durante la ejecución.
-        </p>
+        <!-- BOTÓN MÓVIL -->
+        <button id="menuBtn" class="md:hidden p-2" aria-label="Abrir menú">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M3 6h18M3 12h18M3 18h18"/>
+          </svg>
+        </button>
       </div>
+    </div>
 
-      <!-- SLIDER -->
-      <div class="card p-4">
-        <p class="text-sm font-semibold">Ejemplo real · Antes / Después</p>
-        <p class="text-xs text-slate-500">Arrastra para comparar el terreno real con la visualización del proyecto.</p>
+    <!-- MENU MÓVIL -->
+    <div id="mobileMenu" class="md:hidden hidden border-t border-slate-200 bg-white">
+      <div class="px-4 py-3 flex flex-col gap-3 text-sm">
+        <a href="#valor" class="hover:text-kairu-600">Valor</a>
+        <a href="#uso" class="hover:text-kairu-600">Cuándo usarlo</a>
+        <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
+        <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
+          Explorar piloto
+        </a>
+      </div>
+    </div>
+  </header>
 
-        <div class="mt-4 ba-wrap" data-start="55">
-          <img src="/assets/ar-before.jpg" alt="Terreno real">
-          <div class="ba-after-clip">
-            <img src="/assets/ar-after.jpg" alt="Proyecto sobre terreno real">
+  <!-- HERO -->
+  <section class="relative">
+    <div class="mx-auto px-4 sm:px-6 pt-12 pb-10 container-narrow">
+      <div class="grid lg:grid-cols-2 gap-10 items-center">
+
+        <!-- TEXTO -->
+        <div>
+          <p class="text-xs uppercase tracking-wider text-slate-500">
+            Construcción · Ingeniería · Infraestructuras
+          </p>
+
+          <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold leading-tight">
+            Decisiones críticas <span class="text-kairu-600">antes</span> de construir.
+            <span class="block">El proyecto visto sobre el <span class="text-kairu-600">terreno real</span>.</span>
+          </h1>
+
+          <p class="mt-4 text-lg text-slate-600">
+            Visualización avanzada en parcela mediante drones para reducir errores,
+            alinear decisores y minimizar riesgos en fases donde el coste del error es máximo.
+          </p>
+
+          <p class="mt-3 text-sm font-medium text-slate-800">
+            No es una demo de realidad aumentada.
+            <span class="text-kairu-600">Es una herramienta para decidir con menos interpretación y menos riesgo.</span>
+          </p>
+
+          <div class="mt-6 flex gap-3 flex-wrap">
+            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
+              Explorar piloto técnico
+            </a>
+            <a href="#valor" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
+              Por qué es diferente
+            </a>
           </div>
-          <div class="ba-divider">
-            <div class="ba-handle">◀ ▶</div>
+
+          <p class="mt-4 text-xs text-slate-500 max-w-md">
+            Diseñado principalmente para fases previas a la construcción y revisiones puntuales durante la ejecución.
+          </p>
+        </div>
+
+        <!-- SLIDER -->
+        <div class="card p-4">
+          <p class="text-sm font-semibold">Ejemplo real · Antes / Después</p>
+          <p class="text-xs text-slate-500">Arrastra para comparar el terreno real con la visualización del proyecto.</p>
+
+          <div class="mt-4 ba-wrap" data-start="55">
+            <img src="/assets/ar-before.jpg" alt="Terreno real (antes)">
+            <div class="ba-after-clip">
+              <img src="/assets/ar-after.jpg" alt="Terreno con visualización (después)">
+            </div>
+            <div class="ba-divider" aria-hidden="true">
+              <div class="ba-handle">◀ ▶</div>
+            </div>
+            <input class="ba-range" type="range" min="0" max="100" value="55" aria-label="Comparar antes y después">
           </div>
-          <input class="ba-range" type="range" min="0" max="100" value="55">
+
+          <div class="mt-2 flex justify-between text-xs text-slate-500">
+            <span>Antes</span>
+            <span>Después</span>
+          </div>
+
+          <p class="mt-2 text-[11px] text-slate-400">
+            Visualización conceptual con fines explicativos.
+          </p>
         </div>
 
-        <div class="mt-2 flex justify-between text-xs text-slate-500">
-          <span>Antes</span>
-          <span>Después</span>
-        </div>
-
-        <p class="mt-2 text-[11px] text-slate-400">
-          Visualización conceptual con fines explicativos.
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- VALOR DIFERENCIAL -->
-<section id="valor" class="py-12 bg-white/70 border-y border-slate-200/60">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <h2 class="text-3xl font-bold">Dónde está el valor añadido</h2>
-    <p class="mt-3 text-slate-600 max-w-3xl">
-      Hoy existen herramientas técnicas muy potentes para ingeniería y operación diaria.
-      Nuestro enfoque es distinto: reducir ambigüedad en momentos de decisión.
-    </p>
-
-    <div class="mt-8 grid md:grid-cols-2 gap-6">
-      <div class="card p-6">
-        <h3 class="font-semibold text-lg">Lo que existe hoy</h3>
-        <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
-          <li>Plataformas técnicas complejas</li>
-          <li>Foco en ejecución y operación continua</li>
-          <li>Requieren formación y despliegue</li>
-          <li>Difíciles de usar por decisores no técnicos</li>
-        </ul>
-      </div>
-
-      <div class="card p-6 border border-kairu-200">
-        <h3 class="font-semibold text-lg text-kairu-700">Nuestro enfoque</h3>
-        <ul class="mt-3 text-sm text-slate-700 list-disc pl-5 space-y-2">
-          <li>Visualización clara para decidir</li>
-          <li>Basado en drones y flujos ligeros</li>
-          <li>Servicio puntual, no sistema permanente</li>
-          <li>Diseñado para dirección, promotor e ingeniería</li>
-        </ul>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- USO -->
-<section class="py-12">
-  <div class="mx-auto px-4 sm:px-6 container-narrow">
-    <h2 class="text-3xl font-bold">Cuándo tiene sentido</h2>
+  <!-- VALOR AÑADIDO -->
+  <section id="valor" class="py-12 bg-white/70 border-y border-slate-200/60">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <h2 class="text-3xl font-bold">Dónde está el valor añadido</h2>
 
-    <div class="mt-8 grid md:grid-cols-2 gap-6">
-      <div class="card p-6">
-        <h3 class="font-semibold text-lg">Antes de construir (principal)</h3>
-        <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
-          <li>Validación de diseño y volumen</li>
-          <li>Aprobaciones internas o externas</li>
-          <li>Reducción de cambios tardíos</li>
-          <li>Decisiones con alto impacto económico</li>
-        </ul>
-      </div>
-
-      <div class="card p-6">
-        <h3 class="font-semibold text-lg">Durante la construcción (puntual)</h3>
-        <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
-          <li>Revisiones visuales concretas</li>
-          <li>Comunicación con stakeholders</li>
-          <li>Seguimiento de hitos</li>
-          <li>No diseñado para control operativo diario</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- PILOTO -->
-<section class="py-12 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
-  <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
-    <div class="md:col-span-2">
-      <h2 class="text-3xl font-bold">Piloto técnico (pagado y acotado)</h2>
-      <p class="mt-2 text-white/85">
-        Un piloto cerrado para validar un caso real antes de una implementación mayor.
+      <!-- texto “apurado” en una sola línea lógica -->
+      <p class="mt-3 text-slate-600 max-w-none leading-snug">
+        Hoy existen herramientas técnicas muy potentes para ingeniería y operación diaria;
+        <span class="font-medium text-slate-800">
+          nuestro enfoque es distinto: reducir ambigüedad en momentos de decisión.
+        </span>
       </p>
 
-      <div class="mt-5 grid sm:grid-cols-3 gap-4">
-        <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 parcela</p></div>
-        <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 proyecto</p></div>
-        <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 decisión crítica</p></div>
+      <div class="mt-8 grid md:grid-cols-2 gap-6">
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Lo que existe hoy</h3>
+          <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
+            <li>Plataformas técnicas complejas</li>
+            <li>Foco en ejecución y operación continua</li>
+            <li>Requieren formación y despliegue</li>
+            <li>Difíciles de usar por decisores no técnicos</li>
+          </ul>
+        </div>
+
+        <div class="card p-6 border border-kairu-200">
+          <h3 class="font-semibold text-lg text-kairu-700">Nuestro enfoque</h3>
+          <ul class="mt-3 text-sm text-slate-700 list-disc pl-5 space-y-2">
+            <li>Visualización clara para decidir</li>
+            <li>Basado en drones y flujos ligeros</li>
+            <li>Servicio puntual, no sistema permanente</li>
+            <li>Diseñado para dirección, promotor e ingeniería</li>
+          </ul>
+        </div>
       </div>
     </div>
+  </section>
 
-    <div class="md:justify-self-end">
-      <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
-        Hablar del piloto
-      </a>
+  <!-- CUÁNDO TIENE SENTIDO -->
+  <section id="uso" class="py-12">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <h2 class="text-3xl font-bold">Cuándo tiene sentido</h2>
+
+      <div class="mt-8 grid md:grid-cols-2 gap-6">
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Antes de construir (principal)</h3>
+          <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
+            <li>Validación de diseño y volumen</li>
+            <li>Aprobaciones internas o externas</li>
+            <li>Reducción de cambios tardíos</li>
+            <li>Decisiones con alto impacto económico</li>
+          </ul>
+        </div>
+
+        <div class="card p-6">
+          <h3 class="font-semibold text-lg">Durante la construcción (puntual)</h3>
+          <ul class="mt-3 text-sm text-slate-600 list-disc pl-5 space-y-2">
+            <li>Revisiones visuales concretas</li>
+            <li>Comunicación con stakeholders</li>
+            <li>Seguimiento de hitos</li>
+            <li>No diseñado para control operativo diario</li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<footer class="py-8 text-sm text-slate-500 text-center">
-  © <span id="year"></span> Kairu Tech · Madrid & London
-</footer>
+  <!-- PILOTO -->
+  <section id="piloto" class="py-12 bg-gradient-to-r from-kairu-600 to-kairu-800 text-white">
+    <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
+      <div class="md:col-span-2">
+        <h2 class="text-3xl font-bold">Piloto técnico (pagado y acotado)</h2>
+        <p class="mt-2 text-white/85">
+          Un piloto cerrado para validar un caso real antes de una implementación mayor.
+        </p>
 
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
+        <div class="mt-5 grid sm:grid-cols-3 gap-4">
+          <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 parcela</p></div>
+          <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 proyecto</p></div>
+          <div class="bg-white/10 rounded-xl p-4"><p class="text-sm font-semibold">1 decisión crítica</p></div>
+        </div>
 
-  // Slider logic
-  document.querySelectorAll('.ba-wrap').forEach(wrap=>{
-    const range = wrap.querySelector('.ba-range');
-    const clip = wrap.querySelector('.ba-after-clip');
-    const div = wrap.querySelector('.ba-divider');
-    range.addEventListener('input', e=>{
-      const v = e.target.value;
-      clip.style.width = v + '%';
-      div.style.left = v + '%';
+        <p class="mt-5 text-sm text-white/85">
+          Incluye: preparación de la visualización, sesión guiada (parcela u oficina), material visual entregable y conclusiones para decisión interna.
+        </p>
+      </div>
+
+      <div class="md:justify-self-end">
+        <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
+          Hablar del piloto
+        </a>
+        <p class="mt-3 text-xs text-white/70">
+          *Las visualizaciones mostradas son conceptuales y tienen fines explicativos.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="py-10 border-t border-slate-200/60 text-sm text-slate-500">
+    <div class="mx-auto px-4 sm:px-6 container-narrow flex flex-col md:flex-row items-center justify-between gap-4">
+      <p>© <span id="year"></span> Kairu Tech · Madrid & London</p>
+      <div class="flex items-center gap-4">
+        <a href="/legal.html" class="hover:text-kairu-600">Legal</a>
+        <a href="/contacto.html" class="hover:text-kairu-600">Contacto</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Mobile menu
+    document.getElementById('menuBtn')?.addEventListener('click', ()=>{
+      document.getElementById('mobileMenu')?.classList.toggle('hidden');
     });
-  });
-</script>
+
+    // Before/After slider
+    document.querySelectorAll('.ba-wrap').forEach(wrap => {
+      const range = wrap.querySelector('.ba-range');
+      const clip  = wrap.querySelector('.ba-after-clip');
+      const div   = wrap.querySelector('.ba-divider');
+      const start = wrap.dataset.start ? Number(wrap.dataset.start) : Number(range.value);
+
+      range.value = String(start);
+      clip.style.width = start + '%';
+      div.style.left   = start + '%';
+
+      range.addEventListener('input', (e) => {
+        const v = Number(e.target.value);
+        clip.style.width = v + '%';
+        div.style.left   = v + '%';
+      });
+    });
+  </script>
 
 </body>
 </html>
